--- a/index.html
+++ b/index.html
@@ -1,10 +1,64 @@
 <!DOCTYPE html>
     <head>
+        <meta charset="utf-8"/>
         <title>Brick City</title>
+        <link rel="stylesheet" type="text/css" href="css/Chart.min.css.css" />
         <link rel="stylesheet" type="text/css" href="css/main.css" />
+        <script src="js/main.js"></script>
+        <script src="js/dataGroups.js"></script>
+        <script src="js/Chart.min.js"></script>
     </head>
 
     <body>
+        <p id="demo"></p>
+        <button onclick="displayGroup('studentPerformanceSAT');">Hello</button>
 
+        <script>
+            // Example group: Student Performance
+
+        </script>
+
+        <canvas id="myChart" width="100" height="100"></canvas>
+        <script>
+            /*
+            var ctx = document.getElementById('myChart').getContext('2d');
+            var myChart = new Chart(ctx, {
+                type: 'bar',
+                data: {
+                    labels: ['Red', 'Blue', 'Yellow', 'Green', 'Purple', 'Orange'],
+                    datasets: [{
+                        label: '# of Votes',
+                        data: [12, 19, 3, 5, 2, 3],
+                        backgroundColor: [
+                            'rgba(255, 99, 132, 0.2)',
+                            'rgba(54, 162, 235, 0.2)',
+                            'rgba(255, 206, 86, 0.2)',
+                            'rgba(75, 192, 192, 0.2)',
+                            'rgba(153, 102, 255, 0.2)',
+                            'rgba(255, 159, 64, 0.2)'
+                        ],
+                        borderColor: [
+                            'rgba(255, 99, 132, 1)',
+                            'rgba(54, 162, 235, 1)',
+                            'rgba(255, 206, 86, 1)',
+                            'rgba(75, 192, 192, 1)',
+                            'rgba(153, 102, 255, 1)',
+                            'rgba(255, 159, 64, 1)'
+                        ],
+                        borderWidth: 1
+                    }]
+                },
+                options: {
+                    scales: {
+                        yAxes: [{
+                            ticks: {
+                                beginAtZero: true
+                            }
+                        }]
+                    }
+                }
+            });
+            */
+        </script>
     </body>
 </html>
