fix multiple visualizations not generating properly when grouped, seperate chart functions from main.js

--- a/index.html
+++ b/index.html
@@ -4,16 +4,19 @@
     <title>Brick City</title>
     <link rel="stylesheet" type="text/css" href="css/Chart.min.css.css" />
     <link rel="stylesheet" type="text/css" href="css/main.css" />
-    <script src="js/main.js"></script>
-    <script src="js/jquery-3.4.1.min.js"></script>
-    <script src="js/dataGroups.js"></script>
-    <script src="js/Chart.min.js"></script>
+
 </head>
 
 <body>
-    <button onclick="displayGroup('studentPerformanceSAT');">Hello</button>
+    <button id="testButton">Hello</button>
 
     <div id="main-container"></div>
+
+    <script src="js/jquery-3.4.1.min.js"></script>
+    <script src="js/dataGroups.js"></script>
+    <script src="js/visualizationFunctions.js"></script>
+    <script src="js/main.js"></script>
+    <script src="js/Chart.min.js"></script>
 
 </body>
 </html>
