feature: "featured" content, add documentation to README

--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
 </head>
 
 <body>
-    <button id="testButton">Hello</button>
-
+    <div id="featured"></div>
     <div id="main-container"></div>
 
     <script src="js/jquery-3.4.1.min.js"></script>
     <script src="js/dataGroups.js"></script>
+    <script src="data/dataGroups.js"></script>
     <script src="js/visualizationFunctions.js"></script>
     <script src="js/main.js"></script>
     <script src="js/Chart.min.js"></script>
