--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
     <script src="js/jquery-3.4.1.min.js"></script>
     <script src="js/dataGroups.js"></script>
-    <script src="data/dataGroups.js"></script>
+    <script src="data/data.js"></script>
     <script src="js/visualizationFunctions.js"></script>
     <script src="js/main.js"></script>
     <script src="js/Chart.min.js"></script>
