Front End Implementation
Implemented the front end designed in codepen.

--- a/index.html
+++ b/index.html
@@ -8,6 +8,21 @@
 </head>
 
 <body>
+    <div class="flexContainer column full">
+        <header><h1>Header</h1></header>
+        <div class="flexContainer flexItem">
+            <aside>
+                <div id="featured"></div>
+            </aside>
+            <main>
+                <div style="background:yellow; padding:10px">arrow would be in here ig</div>
+                <div id="graphContainer">
+                    
+                </div>
+            </main>
+        </div>
+    </div>
+
     <div id="featured"></div>
     <div id="main-container"></div>
 
