--- a/index.html
+++ b/index.html
@@ -9,22 +9,25 @@
 
 <body>
     <div class="flexContainer column full">
-        <header><h1>Header</h1></header>
         <div class="flexContainer flexItem">
             <aside>
+                <h3>Featured</h3>
                 <div id="featured"></div>
             </aside>
             <main>
-                <div style="background:yellow; padding:10px">arrow would be in here ig</div>
-                <div id="graphContainer">
-                    
+                <div class="arrowContainer">arrow goes here</div>
+                <div class="mainHeader">
+                    <p><h2>Page Title</h2></p>
+                    <p>Subtitle</p>
+                </div>
+                <div id="graphContainer"></div>
+                <div class="descriptionContainer">
+                    <p><h4>About this data</h4></p>
+                    <p>Lorem ispum description goes here lorem ipsum</p>
                 </div>
             </main>
         </div>
     </div>
-
-    <div id="featured"></div>
-    <div id="main-container"></div>
 
     <script src="js/jquery-3.4.1.min.js"></script>
     <script src="js/dataGroups.js"></script>
