--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <title>Brick City</title>
     <link rel="stylesheet" type="text/css" href="css/Chart.min.css.css" />
     <link rel="stylesheet" type="text/css" href="css/main.css" />
+    <link href="https://fonts.googleapis.com/css?family=Catamaran|Montserrat" rel="stylesheet">
 
 </head>
 
@@ -15,15 +16,17 @@
                 <div id="featured"></div>
             </aside>
             <main>
-                <div class="arrowContainer">arrow goes here</div>
-                <div class="mainHeader">
-                    <p><h2>Page Title</h2></p>
-                    <p>Subtitle</p>
-                </div>
-                <div id="graphContainer"></div>
-                <div class="descriptionContainer">
-                    <p><h4>About this data</h4></p>
-                    <p>Lorem ispum description goes here lorem ipsum</p>
+                <div class="mainContainer">
+                    <div class="arrowContainer">arrow goes here</div>
+                    <div class="mainHeader">
+                        <p><h2 id="pageTitle" class="title">Page Title</h2></p>
+                        <p id="pageSubtitle" class="subtitle">Subtitle</p>
+                    </div>
+                    <div id="graphContainer" class="flexContainer"></div>
+                    <div class="descriptionContainer">
+                        <p><h4 id="aboutTitle" class="title">About this data</h4></p>
+                        <p id="aboutText" class="subtitle">Lorem ispum description goes here lorem ipsum</p>
+                    </div>
                 </div>
             </main>
         </div>
