feature: welcome page with filter selection

--- a/index.html
+++ b/index.html
@@ -17,15 +17,22 @@
             </aside>
             <main>
                 <div class="mainContainer">
-                    <div class="arrowContainer">arrow goes here</div>
-                    <div class="mainHeader">
-                        <p><h2 id="pageTitle" class="title">Page Title</h2></p>
-                        <p id="pageSubtitle" class="subtitle">Subtitle</p>
+                    <div id="welcome">
+                        <h5>WELCOME</h5>
+                        <div id="filtersContainer"></div>
+                        <div id="results"></div>
                     </div>
-                    <div id="graphContainer" class="flexContainer"></div>
-                    <div class="descriptionContainer">
-                        <p><h4 id="aboutTitle" class="title">About this data</h4></p>
-                        <p id="aboutText" class="subtitle">Lorem ispum description goes here lorem ipsum</p>
+                    <div id="graph">
+                        <div class="arrowContainer">arrow goes here</div>
+                        <div class="mainHeader">
+                            <p><h2 id="pageTitle" class="title">Page Title</h2></p>
+                            <p id="pageSubtitle" class="subtitle">Subtitle</p>
+                        </div>
+                        <div id="graphContainer" class="flexContainer"></div>
+                        <div class="descriptionContainer">
+                            <p><h4 id="aboutTitle" class="title">About this data</h4></p>
+                            <p id="aboutText" class="subtitle">Lorem ispum description goes here lorem ipsum</p>
+                        </div>
                     </div>
                 </div>
             </main>
