add ability to go back to welcome screen

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                         <div id="results"></div>
                     </div>
                     <div id="graph">
-                        <div class="arrowContainer">arrow goes here</div>
+                        <div id="arrowContainer">arrow goes here</div>
                         <div class="mainHeader">
                             <p><h2 id="pageTitle" class="title">Page Title</h2></p>
                             <p id="pageSubtitle" class="subtitle">Subtitle</p>
