feature: related content

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                     <div id="welcome">
                         <h5>WELCOME</h5>
                         <div id="filtersContainer"></div>
-                        <div id="results"></div>
+                        <div id="resultsContainer"></div>
                     </div>
                     <div id="graph">
                         <div id="arrowContainer">arrow goes here</div>
@@ -33,6 +33,7 @@
                             <p><h4 id="aboutTitle" class="title">About this data</h4></p>
                             <p id="aboutText" class="subtitle">Lorem ispum description goes here lorem ipsum</p>
                         </div>
+                        <div id="relatedContainer"></div>
                     </div>
                 </div>
             </main>
