--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <head>
     <meta charset="utf-8"/>
     <title>Brick City</title>
-    <link rel="stylesheet" type="text/css" href="css/Chart.min.css.css" />
+    <link rel="stylesheet" type="text/css" href="css/Chart.min.css" />
     <link rel="stylesheet" type="text/css" href="css/main.css" />
     <link href="https://fonts.googleapis.com/css?family=Catamaran|Montserrat" rel="stylesheet">
 
@@ -18,22 +18,25 @@
             <main>
                 <div class="mainContainer">
                     <div id="welcome">
-                        <h5>WELCOME</h5>
+                        <div class="welcomeHeader">
+                            <h1 class="title">Brick City</h1>
+                            <h2 class="subtitle">Education Dataset</h2>
+                        </div>
                         <div id="filtersContainer"></div>
                         <div id="resultsContainer"></div>
                     </div>
                     <div id="graph">
-                        <div id="arrowContainer">arrow goes here</div>
+                        <div class="arrowContainer"><div id="arrow"></div></div>
                         <div class="mainHeader">
                             <p><h2 id="pageTitle" class="title">Page Title</h2></p>
                             <p id="pageSubtitle" class="subtitle">Subtitle</p>
                         </div>
                         <div id="graphContainer" class="flexContainer"></div>
-                        <div class="descriptionContainer">
-                            <p><h4 id="aboutTitle" class="title">About this data</h4></p>
-                            <p id="aboutText" class="subtitle">Lorem ispum description goes here lorem ipsum</p>
+                        <div class="relatedContainer">
+                            <h4 class="title">Related Datasets</h3>
+                            <div id="relatedContainer">
+                            </div>
                         </div>
-                        <div id="relatedContainer"></div>
                     </div>
                 </div>
             </main>
@@ -46,6 +49,9 @@
     <script src="js/visualizationFunctions.js"></script>
     <script src="js/main.js"></script>
     <script src="js/Chart.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/chart.js@2.8.0"></script>
+    <script src="https://cdn.jsdelivr.net/npm/hammerjs@2.0.8"></script>
+    <script src="https://cdn.jsdelivr.net/npm/chartjs-plugin-zoom@0.7.0"></script>
 
 </body>
 </html>
